WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191983
Regression(PSON) crash under WebPageProxy::didReceiveServerRedirectForProvisionalLoadForFrame()
https://bugs.webkit.org/show_bug.cgi?id=191983
Summary
Regression(PSON) crash under WebPageProxy::didReceiveServerRedirectForProvisi...
Chris Dumez
Reported
2018-11-26 14:59:49 PST
Deal with potentially null navigation object in WebPageProxy::didReceiveServerRedirectForProvisionalLoadForFrame().
Attachments
Patch
(1.60 KB, patch)
2018-11-26 15:01 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.17 KB, patch)
2018-11-27 11:00 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-11-26 15:00:05 PST
<
rdar://problem/46246863
>
Chris Dumez
Comment 2
2018-11-26 15:01:05 PST
Created
attachment 355681
[details]
Patch
David Kilzer (:ddkilzer)
Comment 3
2018-11-26 21:12:41 PST
Comment on
attachment 355681
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2018-11-26 21:38:56 PST
Comment on
attachment 355681
[details]
Patch Rejecting
attachment 355681
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 355681, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=355681&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=191983
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 355681 from
bug 191983
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=355681
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebKit/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebKit/ChangeLog' is out of date W: 87e1d68cb7b3425a1307a238bd2175eb470845f6 and refs/remotes/origin/master differ, using rebase: :040000 040000 c4807d5526188890c4ce139e5634cfaef2966d3e bfc2fa26c7b37ea3520ffa0f235d1a7be3453b52 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebKit/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebKit/ChangeLog' is out of date W: 87e1d68cb7b3425a1307a238bd2175eb470845f6 and refs/remotes/origin/master differ, using rebase: :040000 040000 c4807d5526188890c4ce139e5634cfaef2966d3e bfc2fa26c7b37ea3520ffa0f235d1a7be3453b52 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
https://webkit-queues.webkit.org/results/10162779
Chris Dumez
Comment 5
2018-11-27 10:11:49 PST
I manage to write a test, I'll update the patch.
Chris Dumez
Comment 6
2018-11-27 11:00:55 PST
Created
attachment 355748
[details]
Patch
Geoffrey Garen
Comment 7
2018-11-27 11:29:10 PST
Comment on
attachment 355748
[details]
Patch r=me
WebKit Commit Bot
Comment 8
2018-11-27 11:52:43 PST
Comment on
attachment 355748
[details]
Patch Clearing flags on attachment: 355748 Committed
r238565
: <
https://trac.webkit.org/changeset/238565
>
WebKit Commit Bot
Comment 9
2018-11-27 11:52:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug