Regression(PSON) crash under WebPageProxy::didReceiveServerRedirectForProvisionalLoadForFrame() https://bugs.webkit.org/show_bug.cgi?id=191983 <rdar://problem/46246863>

Reviewed by Geoffrey Garen.

Source/WebKit:

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::continueNavigationInNewProcess):
Make sure the navigation still exists in m_mainFrameCreationHandler and return early if it
does not.

(WebKit::WebPageProxy::resetState):
Clear out m_mainFrameCreationHandler / m_mainFrameWindowCreationHandler if we resetting the state
after a crash. At this point, there is no chance the WebProcess will send us the IPC that will
cause these to get called and we do not want old state to remain for future navigations.

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:


Canonical link: https://commits.webkit.org/206725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238565 268f45cc-cd09-0410-ab3c-d52691b4dbfc